--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,14 @@ button {
 }
 
 @media (max-width: 768px) {
+    body {
+        margin: 30px 0;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+    }
+
     section {
         width: 330px;
         height: 1330px;
